--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <title>Tree view</title>
     <link rel="stylesheet" type="text/css" href="public/app.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
 </head>
 <body>
     <p>
@@ -12,7 +11,7 @@
     <p>
         <input type="text" name="" id="searchText">
         <button id="search">Search</button>
-        <button id="reset">Reset</button>
+        <button id="clear">Clear</button>
     </p>
     <ul class="treeView" id="treeStructure">
         <li><span class="rootNode">Root</span>
